--- a/src/Marketplace.Framework/Marketplace.Framework.csproj
+++ b/src/Marketplace.Framework/Marketplace.Framework.csproj
@@ -4,8 +4,8 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="EventStore.ClientAPI.NetCore" Version="4.0.3-rc" />
+    <PackageReference Include="EventStore.ClientAPI.NetCore" Version="4.1.0.23" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-    <PackageReference Include="RavenDB.Client" Version="4.0.0-rc-40025" />
+    <PackageReference Include="RavenDB.Client" Version="4.0.3" />
   </ItemGroup>
 </Project>
