Optimized Program, simplified Startup and added better logging.

--- a/src/Marketplace/appsettings.json
+++ b/src/Marketplace/appsettings.json
@@ -1,3 +1,39 @@
 ﻿{
-  "urls": "http://*:5500"
+  "EventStore": {
+    "ConnectionString": "ConnectTo=tcp://admin:changeit@localhost:1113; DefaultUserCredentials=admin:changeit;"
+  },
+
+  "RavenDb": {
+    "Url": "http://localhost:8080",
+    "Database": "Marketplace"
+  },
+
+  "Swagger": {
+    "Title": "Marketplace API",
+    "Version": "1",
+    "Endpoint": {
+      "Url": "/swagger/v1/swagger.json",
+      "Name": "Marketplace API v1"
+    }
+  },
+  
+  "Serilog": {
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Verbose",
+        "System": "Debug"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Literate, Serilog.Sinks.Console",
+          "outputTemplate": "[{Timestamp:HH:mm:ss.fff} {Level:u3}] ({ThreadId:000}) {SourceContext} {Message}{NewLine}{Exception}"
+        }
+      }
+    ]
+  }
 }
