--- a/src/Marketplace.Framework/Marketplace.Framework.csproj
+++ b/src/Marketplace.Framework/Marketplace.Framework.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="EventStore.ClientAPI.NetCore" Version="4.1.0.23" />
+    <PackageReference Include="LibLog" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="RavenDB.Client" Version="4.0.3" />
   </ItemGroup>
