Added tests to final solution. Fixed all little things.

--- a/tests/Marketplace.Framework.Tests/Marketplace.Framework.Tests.csproj
+++ b/tests/Marketplace.Framework.Tests/Marketplace.Framework.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>7.1</LangVersion>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
@@ -12,7 +12,7 @@
     <PackageReference Include="FluentAssertions" Version="5.3.2" />
     <PackageReference Include="EventStore.ClientAPI.NetCore" Version="4.1.0.23" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="RavenDB.Client" Version="4.0.3" />
+    <PackageReference Include="RavenDB.Client" Version="4.1.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Marketplace.Domain\Marketplace.Domain.csproj" />
