--- a/Rating/Rating/Rating/Rating.csproj
+++ b/Rating/Rating/Rating/Rating.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
+
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <LangVersion>7.1</LangVersion>
     </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="EventStore.ClientAPI.NetCore" Version="4.1.0.23" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
-        <PackageReference Include="RavenDB.Client" Version="4.1.0" />
         <PackageReference Include="Serilog" Version="2.7.1" />
         <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="2.6.1" />
@@ -14,15 +15,20 @@
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="3.0.0" />
     </ItemGroup>
     <ItemGroup>
-        <ProjectReference Include="..\Marketplace.Domain\Marketplace.Domain.csproj" />
+        <Content Update="appsettings.json">
+            <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
     <ItemGroup>
-      <Content Update="appsettings.json">
-        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
+      <ProjectReference Include="..\Rating.Domain\Rating.Domain.csproj" />
+      <ProjectReference Include="..\Rating.Framework\Rating.Framework.csproj" />
     </ItemGroup>
-
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
     <PropertyGroup>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <NoWarn>$(NoWarn);1591</NoWarn>
