--- a/src/Marketplace/Marketplace.csproj
+++ b/src/Marketplace/Marketplace.csproj
@@ -7,6 +7,9 @@
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="RavenDB.Client" Version="4.1.0" />
         <PackageReference Include="Serilog" Version="2.7.1" />
+        <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.2" />
+        <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.1" />
+        <PackageReference Include="Serilog.Enrichers.Thread" Version="3.0.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="2.6.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
