--- a/steps/1_the_beginning/src/Marketplace/Marketplace.csproj
+++ b/steps/1_the_beginning/src/Marketplace/Marketplace.csproj
@@ -1,6 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
