--- a/src/Marketplace/appsettings.json
+++ b/src/Marketplace/appsettings.json
@@ -22,7 +22,8 @@
       "Default": "Debug",
       "Override": {
         "Microsoft": "Verbose",
-        "System": "Debug"
+        "System": "Debug",
+        "EventStore": "Verbose"
       }
     },
     "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
