--- a/src/Marketplace/Marketplace.csproj
+++ b/src/Marketplace/Marketplace.csproj
@@ -1,5 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+    </PropertyGroup>
+    
     <ItemGroup>
+        <PackageReference Include="FluentValidation" Version="8.0.100" />
+        <PackageReference Include="FluentValidation.AspNetCore" Version="8.0.100" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="RavenDB.Client" Version="4.1.2" />
         <PackageReference Include="Serilog" Version="2.7.1" />
@@ -19,8 +25,15 @@
         <ProjectReference Include="..\Marketplace.Domain\Marketplace.Domain.csproj" />
     </ItemGroup>
     
+    <!--<ItemGroup>-->
+        <!--<Content Update="appsettings.development.json" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" />-->
+    <!--</ItemGroup>-->
+    
     <ItemGroup>
-        <None Update="appsettings.json" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" />
+      <Content Update="appsettings.json">
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <PropertyGroup>
