--- a/src/Marketplace/Marketplace.csproj
+++ b/src/Marketplace/Marketplace.csproj
@@ -2,10 +2,8 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
     </PropertyGroup>
-    
+
     <ItemGroup>
-        <PackageReference Include="FluentValidation" Version="8.0.100" />
-        <PackageReference Include="FluentValidation.AspNetCore" Version="8.0.100" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="RavenDB.Client" Version="4.1.2" />
         <PackageReference Include="Serilog" Version="2.7.1" />
@@ -20,20 +18,20 @@
         <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
         <PackageReference Include="RavenDB.Client" Version="4.1.2" />
     </ItemGroup>
-    
+
     <ItemGroup>
         <ProjectReference Include="..\Marketplace.Domain\Marketplace.Domain.csproj" />
     </ItemGroup>
-    
-    <!--<ItemGroup>-->
-        <!--<Content Update="appsettings.development.json" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" />-->
-    <!--</ItemGroup>-->
-    
+
     <ItemGroup>
       <Content Update="appsettings.json">
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Modules\Users" />
     </ItemGroup>
 
     <PropertyGroup>
