--- a/src/Marketplace/appsettings.json
+++ b/src/Marketplace/appsettings.json
@@ -16,10 +16,10 @@
       "Name": "Marketplace API v1"
     }
   },
-  
+
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Debug",
+      "Default": "Verbose",
       "Override": {
         "Microsoft": "Verbose",
         "System": "Debug",
